kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp
spec:
  rules:
  - host: k8s.devopsdirective.com
    http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: webapp
            port:
              number: 80
